fix: add overflow-y:auto

--- a/packages/css/src/less/drawer.less
+++ b/packages/css/src/less/drawer.less
@@ -21,7 +21,7 @@
 
   .drawer-content {
     flex: 1;
-    overflow-y: scroll;
+    overflow-y: auto;
   }
 
   .drawer-header {
