--- a/packages/css/src/less/sliding-panel.less
+++ b/packages/css/src/less/sliding-panel.less
@@ -8,7 +8,7 @@
   transform: translateX(-100%);
   transition: var(--transition-transform);
   background: var(--brand-white);
-  overflow-y: scroll;
+  overflow-y: auto;
   z-index: var(--zindex-navbar-fixed);
   position: absolute;
 
